--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header__content">
           <a href="#">
             <div class="header__logo">
-              <img src="./public/stream_online_header.svg" alt="svg" />
+              <img src="../public/stream_online_header.svg" alt="svg" />
             </div>
           </a>
           <ul class="header__list">
@@ -27,7 +27,7 @@
         <div class="home__logo">
           <img
             class="home__logo-img"
-            src="../public/stream_online_header.svg"
+            src=".../public/stream_online_header.svg"
             alt="svg"
           />
         </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="article__container-photo">
             <img
-              src="../../public/infinity-Green-screen-studio-KL-malaysia.jpg"
+              src="../.../public/infinity-Green-screen-studio-KL-malaysia.jpg"
               alt=""
             />
           </div>
@@ -101,7 +101,7 @@
             </p>
           </div>
           <div class="article__container-photo">
-            <img src="../../public/ppv-icon-pay-per-view-vector.jpg" alt="" />
+            <img src="../.../public/ppv-icon-pay-per-view-vector.jpg" alt="" />
           </div>
         </div>
         <div class="article__container">
@@ -119,7 +119,7 @@
             </p>
           </div>
           <div class="article__container-photo">
-            <img src="../../public/MDR_Kripo_live.jpg" alt="" />
+            <img src="../.../public/MDR_Kripo_live.jpg" alt="" />
           </div>
         </div>
       </div>
