--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div
+      class="wrapper"
+      style="
+        background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0) 10%,
+            rgba(0, 0, 0, 1)
+          ),
+          url(public/stream_online_banner.jpg);
+      "
+    >
       <nav class="header">
         <div class="header__content">
           <a href="#">
