--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             rgba(0, 0, 0, 1)
           ),
           url(public/stream_online_banner.jpg);
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+        width: 100%;
       "
     >
       <nav class="header">
